--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "electron app.js"
   },
   "devDependencies": {
-    "electron": "^1.7.6"
+    "electron": "^1.7.6",
+    "electron-installer-dmg": "^0.2.1"
   }
 }
