--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   "dependencies": {
     "axios": "^0.17.1",
     "electron-log": "^2.2.11",
+    "electron-redux": "^1.3.1",
     "ipfs": "^0.26.0",
     "ipfs-api": "^15.0.1",
-    "mustache": "^2.3.0"
+    "mustache": "^2.3.0",
+    "redux-thunk": "^2.2.0"
   }
 }
