--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "child-process-promise": "^2.2.1",
     "elasticsearch": "^14.1.0",
     "electron-log": "^2.2.11",
     "electron-redux": "^1.3.1",
