--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "electron-redux": "^1.3.1",
     "ipfs": "^0.26.0",
     "ipfs-api": "^15.0.1",
+    "menu": "^0.2.5",
     "mustache": "^2.3.0",
     "redux-thunk": "^2.2.0"
   }
