--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ipfs-api": "^15.0.1",
     "menu": "^0.2.5",
     "mustache": "^2.3.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "self-update": "0.0.1"
   }
 }
